--- a/man_face.html
+++ b/man_face.html
@@ -157,8 +157,7 @@
       // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
       // the link to your model provided by Teachable Machine export panel
-      // 학습모델 링크
-      const URL = "https://teachablemachine.withgoogle.com/models/UnaGhF8wy/";
+      const URL = "https://teachablemachine.withgoogle.com/models/Xr3g4wSl6/";
 
       let model, webcam, labelContainer, maxPredictions;
 
@@ -187,34 +186,21 @@
         var image = document.getElementById("face-image");
         const prediction = await model.predict(image, false);
         // 결과값 내림차순 정렬 ( 큰값이 상단에 )
-        // TODO: 도넛 차트로 변경하기
         prediction.sort(
           (a, b) => parseFloat(b.probability) - parseFloat(a.probability)
         );
 
         // 결과값에 따른 문구
-        // TODO : 도넛 차트로 변경
         var resultMsg;
         switch (prediction[0].className) {
-          case "pretty_girl":
-            resultMsg = "청순 가련 당신! 닮은 연예인은 김태희! 아이유! 김태리!";
+          case "잘생긴":
+            resultMsg = "잘생기셨네요";
             break;
-          case "baby_girl":
-            resultMsg = "아기같은 동안 미모! 닮은 연예인은 김유정! 서신애!";
-            break;
-          case "gag_girl":
-            resultMsg =
-              "개그력이 넘치는 매력쟁이 당신! 닮은 연예인은 장도연 or 이국주?!";
-            break;
-          case "sexy_girl":
-            resultMsg =
-              "매혹적인 섹시함! 닮은 연예인은 할리우드 스타 에바그린!";
-            break;
-          case "cool_girl":
-            resultMsg = "남성적인 걸크러쉬 매력!! 당신 혹시 이준기?!";
+          case "못생긴":
+            resultMsg = "못생기셨네요";
             break;
           default:
-            resultMsg = "Error!!";
+            resultMsg = "알수없음";
         }
 
         $(".result-message").html(resultMsg);
