--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     </nav>
     <!--# Nav Bar 끝-->
     <section class="section">
-      <h1 class="title">인공지능 매력평가 테스트</h1>
-      <h2 class="subtitle">내 매력을 평가해줘</h2>
+      <h1 class="title">쁘붕 쁘붕</h1>
+      <h2 class="subtitle">Fearless Assemble!!</h2>
     </section>
-    <h3 class="version-text">여성 버전 입니다. 남성 버전도 준비중 입니다^^</h3>
+    <h3 class="version-text">예전에 만들어논 AI모델이라 구린점 미안합니다.</h3>
     <h3 class="admin-msg-text">
       안심하세요!! 사진은 서버에 절대 저장되지 않습니다.<br /><br />
       하단 댓글란에 피드백 부탁드립니다. 개발자에게 힘이 됩니다!
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-    <section class="mb-5 youtube">
+<!--     <section class="mb-5 youtube">
       <div class="container pt-5 mt-5 youtube-cover">
         <a
           href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg"
@@ -149,7 +149,7 @@
             class="youtube-icon"
         /></a>
       </div>
-    </section>
+    </section> -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script type="text/javascript">
