--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         // 결과값에 따른 문구
         // TODO : 도넛 차트로 변경
         var resultMsg;
-        switch (prediction[0].className) {
+<!--         switch (prediction[0].className) {
           case "pretty_girl":
             resultMsg =
               "청순 가련 당신! <br>닮은 연예인은 김태희! 아이유! 김태리!";
@@ -216,7 +216,7 @@
             break;
           default:
             resultMsg = "Error!!";
-        }
+        } -->
 
         $(".result-message").html(resultMsg);
 
