--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="title" content="매력 테스트" />
+    <meta name="title" content="Fearless Assemble" />
     <meta
       name="subject"
       content="얼굴로 보는 인공지능 매력 테스트, 나와 닮은 연예인을 찾아보세요!"
@@ -39,7 +39,7 @@
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light nav-distance">
-      <a class="navbar-brand" href="./index.html">매력 테스트</a>
+      <a class="navbar-brand" href="./index.html">Fearless Assemble - DCBgGall App Team </a>
 
       <button
         class="navbar-toggler"
@@ -255,7 +255,7 @@
     </script>
 
     <!-- 댓글기능  -->
-    <div id="disqus_thread"></div>
+<!--     <div id="disqus_thread"></div>
     <script>
       /**
        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -280,7 +280,7 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
       <a href="https://disqus.com/?ref_noscript"
         >comments powered by Disqus.</a
       ></noscript
-    >
+    > -->
     <!-- 댓글기능 끝 -->
 
     <!-- 차트 -->
