--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     />
     <!-- # Bootstrap CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>AI 머신러닝</title>
+    <title>쁘갤앱팀</title>
   </head>
 
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light nav-distance">
-      <a class="navbar-brand" href="./index.html">Fearless Assemble - DCBgGall App Team </a>
+      <a class="navbar-brand" href="./index.html">Fearless Assemble</a>
 
       <button
         class="navbar-toggler"
