--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
         switch (prediction[0].className) {
           case "pretty_girl":
             resultMsg =
-              "혹시 브레이브걸스 유나? 나 단발 좋아하네";
+              "혹시 브레이브걸스 유나?😍 아님말구...";
             break;
           case "baby_girl":
             resultMsg = "최강 동안";
             break;
           case "gag_girl":
             resultMsg =
-              "은근 개그쟁이";
+              "그대는 은지 홍은지?";
             break;
           case "sexy_girl":
             resultMsg =
